--- a/src/app/pages/pc/home/about/galaxy-about.component_notice_221026.html
+++ b/src/app/pages/pc/home/about/galaxy-about.component_notice_221026.html
@@ -25,9 +25,10 @@
             <div class="extra-space-m"></div>
             <div class="popup_box_inner">
               <div class="popup_text">
-                주식회사 갤럭시코퍼레이션은 주식회사 유라보레이션과 2022 년 10
-                월 27 일 합병계약을 체결하고, 상법 제 527 조의 3 규정에 의하여
-                그 내용을 아래와 같이 공고합니다.
+                주식회사 갤럭시코퍼레이션은 주식회사 빅플래쉬 및 주식회사
+                유라보레이션과 2022 년 10 월 21 일 각각 합병계약을 체결하고,
+                상법 제 527 조의 3 규정에 의하여 그 내용을 아래와 같이
+                공고합니다.
               </div>
 
               <div class="popup_text" style="text-align: center; margin: 40px">
@@ -39,43 +40,50 @@
                   1. 합병 당사회사<br />
                   가. 존속법인 : 주식회사 갤럭시코퍼레이션
                   <br />
-                  나. 소멸법인 : 주식회사 유라보레이션
+                  나. 소멸법인 : 주식회사 빅플래쉬
                   <br />
+                  다. 소멸법인 : 주식회사 유라보레이션<br />
                   <br />
                 </div>
                 <div style="padding-left: 17px; text-indent: -17px">
-                  2. 합병방법 : 주식회사 갤럭시코퍼레이션이 주식회사
-                  유라보레이션을 흡수합병함<br />
+                  2. 합병방법 : 주식회사 갤럭시코퍼레이션이 주식회사 빅플래쉬 및
+                  유라보레이션을 각각 흡수합병함<br />
                   <br />
                 </div>
                 <div style="padding-left: 10px; text-indent: -10px">
                   3. 합병비율:<br />
-                  「주식회사 갤럭시코퍼레이션 : 주식회사 유라보레이션 = 1 : 0」
+                  「주식회사 갤럭시코퍼레이션 : 주식회사 빅플래쉬 = 1 : 0」
                   <br />
-                  <br />
-                </div>
-                <div style="padding-left: 17px; text-indent: -17px">
-                  4. 소멸회사의 현황<br />
-                  주식회사 유라보레이션 : 인천광역시 중구 영종대로 881, 1416 호
-                  <br />
-                  <br />
-                </div>
-                <div>5. 합병기일: 2022 년 12 월 13 일<br /><br /></div>
-                <div style="padding-left: 17px; text-indent: -17px">
-                  6. 주식회사 갤럭시코퍼레이션과 주식회사 유라보레이션의 본건
-                  합병은 상법 제 527 조의 3 규정에 의한 소규모합병으로
-                  주주총회의 승인을 얻지 아니하고 이사회 결의로 합병함<br />
+                  「주식회사 갤럭시코퍼레이션 : 주식회사 유라보레이션 = 1 :
+                  0」<br />
                   <br />
                 </div>
                 <div style="padding-left: 17px; text-indent: -17px">
-                  7. 소규모합병 반대의사표시 행사(기준일 및 주주명부 폐쇄기간)
+                  4. 각 소멸회사의 현황:<br />
+                  가. 주식회사 빅플래쉬 : 서울특별시 영등포구 국회대로 780, 1134
+                  호
                   <br />
+                  나. 주식회사 유라보레이션 : 인천광역시 중구 영종대로 881, 1416
+                  호<br />
+                  <br />
+                </div>
+                <div>5. 합병기일: 2022 년 12 월 8 일<br /><br /></div>
+                <div style="padding-left: 17px; text-indent: -17px">
+                  6. 주식회사 갤럭시코퍼레이션과 주식회사 빅플래쉬 및 주식회사
+                  유라보레이션과의 본건 합병은 상법 제 527 조의 3 규정에 의한
+                  소규모합병으로 주주총회의 승인을 얻지 아니하고 이사회 결의로
+                  합병함<br />
+                  <br />
+                </div>
+                <div style="padding-left: 17px; text-indent: -17px">
+                  7. 소규모합병 반대의사표시 행사(기준일 및 주주명부
+                  폐쇄기간)<br />
                   <div style="padding-left: 21px; text-indent: -21px">
                     가. 기준일 및 폐쇄기간
                     <br />
-                    기준일 : 2022 년 10 월 27 일
+                    기준일 : 2022 년 10 월 21 일
                     <br />
-                    주주명부 폐쇄기간 : 2022 년 10 월 27 일부터 2022 년 11 월 10
+                    주주명부 폐쇄기간 : 2022 년 10 월 21 일부터 2022 년 11 월 4
                     일까지
                     <br />
                   </div>
@@ -86,8 +94,7 @@
                     <br />
                   </div>
                   <div style="padding-left: 21px; text-indent: -21px">
-                    다. 제출기간: 2022 년 10 월 27 일부터 2022 년 11 월 10
-                    일까지
+                    다. 제출기간: 2022 년 10 월 21 일부터 2022 년 11 월 4 일까지
                     <br />
                   </div>
                   <div style="padding-left: 21px; text-indent: -21px">
@@ -109,23 +116,22 @@
                   8. 채권자 이의절차(상법 527 조의 5)
                   <br />
                   이 합병에 이의가 있는 채권자는 채권자 이의제출 공고일(2022 년
-                  11 월 11 일 예정) 게재일 익일로부터 1 개월 이내에 관계회사에
+                  11 월 7 일 예정) 게재일 익일로부터 1 개월 이내에 관계회사에
                   이의를 제출하기 바람.<br />
                   <br />
                 </div>
                 <div style="padding-left: 17px; text-indent: -17px">
-                  9. 기타<br />
+                  9. 기타 <br />
                   <div style="padding-left: 21px; text-indent: -21px">
                     가. 본 합병은 상법 제 527 조의 3 규정에 의거, 주주총회의
-                    승인을 얻지 아니하고 이사회 결의로서 갈음함
+                    승인을 얻지 아니하고 이사회 결의로서 갈음
                     <br />
                   </div>
                   <div style="padding-left: 21px; text-indent: -21px">
                     나. 상법 제 527 조의 3 제 4 항에 의거 발행주식총수의 100
                     분의 20 이상에 해당하는 주식소유 주주가 본건 합병에
                     반대의사를 통지한 때에는 주주총회의 승인을 이사회의 승인으로
-                    갈음하는 소규모 합병을 할 수 없음
-                    <br />
+                    갈음하는 소규모 합병을 할 수 없음<br />
                     <br />
                   </div>
                 </div>
@@ -149,13 +155,20 @@
                       >
                         <tbody>
                           <tr>
-                            <td style="text-align: center; width: auto">
-                              피합병회사
+                            <td
+                              rowspan="2"
+                              style="text-align: center; width: auto"
+                            >
+                              피합병회사<br />
+                              (해당회사에 ∨)
                             </td>
+                            <td colspan="3">주식회사 빅플래쉬 □</td>
+                          </tr>
+                          <tr>
                             <td colspan="3">주식회사 유라보레이션 □</td>
                           </tr>
                           <tr>
-                            <td style="width: 28%">주주주민등록번호</td>
+                            <td style="width: 28%">주주번호</td>
                             <td style="width: 22%"></td>
                             <td style="width: 28%">주주명</td>
                             <td style="width: 22%"></td>
@@ -182,7 +195,7 @@
                   </div>
                 </div>
                 <div style="text-align: center; margin: 50px">
-                  2022 년 10 월 27 일
+                  2022 년 10 월 14 일
                 </div>
                 <div style="text-align: center; margin-top: 15px">
                   주식회사 갤럭시코퍼레이션 대표이사 최용호(직인생략)
@@ -212,9 +225,10 @@
             <div class="extra-space-m"></div>
             <div class="popup_box_inner">
               <div class="popup_text">
-                주식회사 갤럭시코퍼레이션은 주식회사 유라보레이션과 2022 년 10
-                월 27 일 합병계약을 체결하고, 상법 제 527 조의 3 규정에 의하여
-                그 내용을 아래와 같이 공고합니다.
+                주식회사 갤럭시코퍼레이션은 주식회사 빅플래쉬 및 주식회사
+                유라보레이션과 2022 년 10 월 21 일 각각 합병계약을 체결하고,
+                상법 제 527 조의 3 규정에 의하여 그 내용을 아래와 같이
+                공고합니다.
               </div>
 
               <div class="popup_text" style="text-align: center; margin: 40px">
@@ -226,43 +240,50 @@
                   1. 합병 당사회사<br />
                   가. 존속법인 : 주식회사 갤럭시코퍼레이션
                   <br />
-                  나. 소멸법인 : 주식회사 유라보레이션
+                  나. 소멸법인 : 주식회사 빅플래쉬
                   <br />
+                  다. 소멸법인 : 주식회사 유라보레이션<br />
                   <br />
                 </div>
                 <div style="padding-left: 17px; text-indent: -17px">
-                  2. 합병방법 : 주식회사 갤럭시코퍼레이션이 주식회사
-                  유라보레이션을 흡수합병함<br />
+                  2. 합병방법 : 주식회사 갤럭시코퍼레이션이 주식회사 빅플래쉬 및
+                  유라보레이션을 각각 흡수합병함<br />
                   <br />
                 </div>
                 <div style="padding-left: 10px; text-indent: -10px">
                   3. 합병비율:<br />
-                  「주식회사 갤럭시코퍼레이션 : 주식회사 유라보레이션 = 1 : 0」
+                  「주식회사 갤럭시코퍼레이션 : 주식회사 빅플래쉬 = 1 : 0」
                   <br />
-                  <br />
-                </div>
-                <div style="padding-left: 17px; text-indent: -17px">
-                  4. 소멸회사의 현황<br />
-                  주식회사 유라보레이션 : 인천광역시 중구 영종대로 881, 1416 호
-                  <br />
-                  <br />
-                </div>
-                <div>5. 합병기일: 2022 년 12 월 13 일<br /><br /></div>
-                <div style="padding-left: 17px; text-indent: -17px">
-                  6. 주식회사 갤럭시코퍼레이션과 주식회사 유라보레이션의 본건
-                  합병은 상법 제 527 조의 3 규정에 의한 소규모합병으로
-                  주주총회의 승인을 얻지 아니하고 이사회 결의로 합병함<br />
+                  「주식회사 갤럭시코퍼레이션 : 주식회사 유라보레이션 = 1 :
+                  0」<br />
                   <br />
                 </div>
                 <div style="padding-left: 17px; text-indent: -17px">
-                  7. 소규모합병 반대의사표시 행사(기준일 및 주주명부 폐쇄기간)
+                  4. 각 소멸회사의 현황:<br />
+                  가. 주식회사 빅플래쉬 : 서울특별시 영등포구 국회대로 780, 1134
+                  호
                   <br />
+                  나. 주식회사 유라보레이션 : 인천광역시 중구 영종대로 881, 1416
+                  호<br />
+                  <br />
+                </div>
+                <div>5. 합병기일: 2022 년 12 월 8 일<br /><br /></div>
+                <div style="padding-left: 17px; text-indent: -17px">
+                  6. 주식회사 갤럭시코퍼레이션과 주식회사 빅플래쉬 및 주식회사
+                  유라보레이션과의 본건 합병은 상법 제 527 조의 3 규정에 의한
+                  소규모합병으로 주주총회의 승인을 얻지 아니하고 이사회 결의로
+                  합병함<br />
+                  <br />
+                </div>
+                <div style="padding-left: 17px; text-indent: -17px">
+                  7. 소규모합병 반대의사표시 행사(기준일 및 주주명부
+                  폐쇄기간)<br />
                   <div style="padding-left: 21px; text-indent: -21px">
                     가. 기준일 및 폐쇄기간
                     <br />
-                    기준일 : 2022 년 10 월 27 일
+                    기준일 : 2022 년 10 월 21 일
                     <br />
-                    주주명부 폐쇄기간 : 2022 년 10 월 27 일부터 2022 년 11 월 10
+                    주주명부 폐쇄기간 : 2022 년 10 월 21 일부터 2022 년 11 월 4
                     일까지
                     <br />
                   </div>
@@ -273,8 +294,7 @@
                     <br />
                   </div>
                   <div style="padding-left: 21px; text-indent: -21px">
-                    다. 제출기간: 2022 년 10 월 27 일부터 2022 년 11 월 10
-                    일까지
+                    다. 제출기간: 2022 년 10 월 21 일부터 2022 년 11 월 4 일까지
                     <br />
                   </div>
                   <div style="padding-left: 21px; text-indent: -21px">
@@ -296,23 +316,22 @@
                   8. 채권자 이의절차(상법 527 조의 5)
                   <br />
                   이 합병에 이의가 있는 채권자는 채권자 이의제출 공고일(2022 년
-                  11 월 11 일 예정) 게재일 익일로부터 1 개월 이내에 관계회사에
+                  11 월 7 일 예정) 게재일 익일로부터 1 개월 이내에 관계회사에
                   이의를 제출하기 바람.<br />
                   <br />
                 </div>
                 <div style="padding-left: 17px; text-indent: -17px">
-                  9. 기타<br />
+                  9. 기타 <br />
                   <div style="padding-left: 21px; text-indent: -21px">
                     가. 본 합병은 상법 제 527 조의 3 규정에 의거, 주주총회의
-                    승인을 얻지 아니하고 이사회 결의로서 갈음함
+                    승인을 얻지 아니하고 이사회 결의로서 갈음
                     <br />
                   </div>
                   <div style="padding-left: 21px; text-indent: -21px">
                     나. 상법 제 527 조의 3 제 4 항에 의거 발행주식총수의 100
                     분의 20 이상에 해당하는 주식소유 주주가 본건 합병에
                     반대의사를 통지한 때에는 주주총회의 승인을 이사회의 승인으로
-                    갈음하는 소규모 합병을 할 수 없음
-                    <br />
+                    갈음하는 소규모 합병을 할 수 없음<br />
                     <br />
                   </div>
                 </div>
@@ -336,13 +355,20 @@
                       >
                         <tbody>
                           <tr>
-                            <td style="text-align: center; width: auto">
-                              피합병회사
+                            <td
+                              rowspan="2"
+                              style="text-align: center; width: auto"
+                            >
+                              피합병회사<br />
+                              (해당회사에 ∨)
                             </td>
+                            <td colspan="3">주식회사 빅플래쉬 □</td>
+                          </tr>
+                          <tr>
                             <td colspan="3">주식회사 유라보레이션 □</td>
                           </tr>
                           <tr>
-                            <td style="width: 28%">주주주민등록번호</td>
+                            <td style="width: 28%">주주번호</td>
                             <td style="width: 22%"></td>
                             <td style="width: 28%">주주명</td>
                             <td style="width: 22%"></td>
@@ -369,7 +395,7 @@
                   </div>
                 </div>
                 <div style="text-align: center; margin: 50px">
-                  2022 년 10 월 27 일
+                  2022 년 10 월 14 일
                 </div>
                 <div style="text-align: center; margin-top: 15px">
                   주식회사 갤럭시코퍼레이션 대표이사 최용호(직인생략)
