--- a/src/app/pages/pc/layout/galaxy-layout.component.html
+++ b/src/app/pages/pc/layout/galaxy-layout.component.html
@@ -48,7 +48,7 @@
         <div class="footer">
             <div class="container text-center wow fadeIn" data-wow-delay="0.4s">
                 <!-- <img src="assets/images/home/contact/NaverBlogLogo_WhiteOnK.png" /> -->
-                <a href="https://section.blog.naver.com/BlogHome.naver?directoryNo=0&currentPage=1&groupId=0">
+                <a href="https://blog.naver.com/galaxy_official">
                     <img src="assets/images/home/contact/NaverBlogLogo_WhiteOnK.png" height="50px" width="auto">
                 </a>
                 <p class="copyright"> Copyright &copy; <a href="#" class="theme-author">GALAXY Corp</a> - All Right
