--- a/src/app/pages/pc/home/about/galaxy-about.component_notice_221102.html
+++ b/src/app/pages/pc/home/about/galaxy-about.component_notice_221102.html
@@ -1,14 +1,29 @@
-<section id="text-carousel-intro-section" class="parallax" data-stellar-background-ratio="0.5">
+<section
+  id="text-carousel-intro-section"
+  class="parallax"
+  data-stellar-background-ratio="0.5"
+>
   <div style="position: absolute" #galaxy3dContainer></div>
-  <div style="position: relative; left: 0; right: 0; width: fill" class="container">
+  <div
+    style="position: relative; left: 0; right: 0; width: fill"
+    class="container"
+  >
     <div class="popup_container" #popupContainer>
       <div class="pc">
         <div class="popup">
-          <a (click)="closePopup()" style="cursor: pointer" type="button" class="ly_vote_close"><span
-              class="blind">팝업닫기</span></a>
+          <a
+            (click)="closePopup()"
+            style="cursor: pointer"
+            type="button"
+            class="ly_vote_close"
+            ><span class="blind">팝업닫기</span></a
+          >
           <div class="extra-space-m"></div>
 
-          <div class="popup_box" style="padding-top: 20; padding-left: 10; padding-right: 10">
+          <div
+            class="popup_box"
+            style="padding-top: 20; padding-left: 10; padding-right: 10"
+          >
             <h2 style="text-align: center; text-decoration: underline">
               신주발행 홈페이지 공고문
             </h2>
@@ -32,7 +47,8 @@
                         <p style="display: inline">
                           개최한 당사 이사회에서 다음과 같이 제3자 배정방법으로
                           신주발행을 결의하였기에 공고합니다.
-                        </p><br />
+                        </p>
+                        <br />
                         <br />
                         <p style="text-align: center">- 다 음 - <br /></p>
                         <br />
@@ -42,7 +58,8 @@
                         3. 신주의 납입기일 : 2022년 11월 2일<br />
                         4. 신주의 인수방법 : 상법 제418조 및 당사 정관 제9조
                         제2항에 따른 제3자 배정 방식<br />
-                        5. 신주의 주금납입은행 : 주식회사 신한은행 여의도기업금융센터지점<br />
+                        5. 신주의 주금납입은행 : 주식회사 신한은행
+                        여의도기업금융센터지점<br />
 
                         <br />
                         <p style="text-align: center">2022년 10월 17일<br /></p>
@@ -66,11 +83,19 @@
 
       <div class="mobile">
         <div class="popup" #popup>
-          <a (click)="closePopup()" style="cursor: pointer" type="button" class="ly_vote_close"><span
-              class="blind">팝업닫기</span></a>
+          <a
+            (click)="closePopup()"
+            style="cursor: pointer"
+            type="button"
+            class="ly_vote_close"
+            ><span class="blind">팝업닫기</span></a
+          >
           <div class="extra-space-l"></div>
 
-          <div class="popup_box" style="padding-top: 20; padding-left: 10; padding-right: 10">
+          <div
+            class="popup_box"
+            style="padding-top: 20; padding-left: 10; padding-right: 10"
+          >
             <h3 style="text-align: center; text-decoration: underline">
               신주발행 홈페이지 공고문
             </h3>
@@ -94,7 +119,8 @@
                         <p style="display: inline">
                           개최한 당사 이사회에서 다음과 같이 제3자 배정방법으로
                           신주발행을 결의하였기에 공고합니다.
-                        </p><br />
+                        </p>
+                        <br />
                         <br />
                         <p style="text-align: center">- 다 음 - <br /></p>
                         <br />
@@ -104,7 +130,8 @@
                         3. 신주의 납입기일 : 2022년 11월 2일<br />
                         4. 신주의 인수방법 : 상법 제418조 및 당사 정관 제9조
                         제2항에 따른 제3자 배정 방식<br />
-                        5. 신주의 주금납입은행 : 주식회사 신한은행 여의도기업금융센터지점<br />
+                        5. 신주의 주금납입은행 : 주식회사 신한은행
+                        여의도기업금융센터지점<br />
 
                         <br />
                         <p style="text-align: center">2022년 10월 17일<br /></p>
@@ -130,36 +157,72 @@
       <div id="owl-intro-text" class="owl-carousel">
         <div class="item">
           <h1 class="pc">
-            <img src="assets/images/home/about/pc/main_enjoy_our_metaverse.png" width="60%" />
+            <img
+              src="assets/images/home/about/pc/main_enjoy_our_metaverse.png"
+              width="60%"
+            />
           </h1>
           <h1 class="mobile">
-            <img src="assets/images/home/about/mo/main_enjoy_our_metaverse_m.png" width="70%" />
+            <img
+              src="assets/images/home/about/mo/main_enjoy_our_metaverse_m.png"
+              width="70%"
+            />
           </h1>
           <!-- <h1>ENJOY OUR METAVERS</h1> -->
-          <a class="btn btn-blank page-scroll" href="#dna-section" style="padding: 0px"><img
-              src="assets/images/home/main/main_who_we_are_m.png" width="60%" /></a>
+          <a
+            class="btn btn-blank page-scroll"
+            href="#dna-section"
+            style="padding: 0px"
+            ><img
+              src="assets/images/home/main/main_who_we_are_m.png"
+              width="60%"
+          /></a>
         </div>
         <div class="item">
           <h1 class="pc">
-            <img src="assets/images/home/about/pc/main_persona_universe.png" width="60%" />
+            <img
+              src="assets/images/home/about/pc/main_persona_universe.png"
+              width="60%"
+            />
           </h1>
           <h1 class="mobile">
-            <img src="assets/images/home/about/mo/main_persona_universe_m.png" width="70%" />
+            <img
+              src="assets/images/home/about/mo/main_persona_universe_m.png"
+              width="70%"
+            />
           </h1>
           <!-- <h1>PERSONA UNIVERSE</h1> -->
-          <a class="btn btn-blank page-scroll" href="#galaxy-ip-section" style="padding: 0px"><img
-              src="assets/images/home/main/main_our_persona_m.png" width="70%" /></a>
+          <a
+            class="btn btn-blank page-scroll"
+            href="#galaxy-ip-section"
+            style="padding: 0px"
+            ><img
+              src="assets/images/home/main/main_our_persona_m.png"
+              width="70%"
+          /></a>
         </div>
         <div class="item">
           <h1 class="pc">
-            <img src="assets/images/home/about/pc/main_with_us_together.png" width="60%" />
+            <img
+              src="assets/images/home/about/pc/main_with_us_together.png"
+              width="60%"
+            />
           </h1>
           <h1 class="mobile">
-            <img src="assets/images/home/about/mo/main_with_us_together_m.png" width="70%" />
+            <img
+              src="assets/images/home/about/mo/main_with_us_together_m.png"
+              width="70%"
+            />
           </h1>
           <!-- <h1>WITH US TO INFINITY</h1> -->
-          <a class="btn btn-blank page-scroll" href="#business-section" style="padding: 0px"><img
-              src="assets/images/home/main/main_what_we_do_m.png" width="60%" /></a>
+          <a
+            class="btn btn-blank page-scroll"
+            href="#business-section"
+            style="padding: 0px"
+            ><img
+              src="assets/images/home/main/main_what_we_do_m.png"
+              width="60%"
+          /></a>
         </div>
       </div>
     </div>
